<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/m_radius"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/cI_imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/a"
        android:scaleType="centerCrop"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cI_innerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cI_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/s_padding"
        >
        <TextView
            android:id="@+id/cI_textView_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cI_innerLayout"
            android:text="@string/example_name"
            android:textStyle="bold"
            android:textSize="@dimen/m_font"

            />
        <ImageView
            android:id="@+id/cI_imageView_Icon"
            android:layout_width="@dimen/xs_image"
            android:layout_height="@dimen/xs_image"
            app:layout_constraintTop_toBottomOf="@id/cI_textView_Name"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/group_591"
            />
        <TextView
            android:id="@+id/cI_textView_Ratting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/cI_imageView_Icon"
            app:layout_constraintTop_toBottomOf="@id/cI_textView_Name"
            android:text="@string/example_rating"
            android:layout_marginStart="@dimen/xs_margin"
            android:textColor="@color/grey"
            />
        <TextView
            android:id="@+id/cI_textView_Reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cI_imageView_Icon"
            android:text="@string/example_reviews"
            android:textColor="@color/grey"
            />
        <TextView
            android:id="@+id/cI_textView_Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cI_textView_Reviews"
            android:text="@string/example_location"
            android:textStyle="bold"
            android:textSize="@dimen/sm_font"
            />
        <TextView
            android:id="@+id/cI_textView_Opens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cI_textView_Location"
            android:text="@string/example_open"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/sm_font"
            />
        <ImageView
            android:id="@+id/cI_imageView_locIcon"
            android:layout_width="@dimen/sx_layout"
            android:layout_height="@dimen/sx_layout"
            app:layout_constraintTop_toTopOf="@id/cI_textView_Opens"
            app:layout_constraintEnd_toStartOf="@id/cI_textView_Distance"
            android:src="@drawable/ic_loc_profile"
            android:layout_marginRight="@dimen/xs_margin"
            />
        <TextView
            android:id="@+id/cI_textView_Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/cI_imageView_locIcon"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/example_dist"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>