<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TabCategoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/s_padding"
            android:paddingEnd="@dimen/s_padding"
            >

            <TextView
                android:id="@+id/tab_textView_top5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/top_5"
                android:textSize="@dimen/lm_font"
                android:textStyle="bold"
                android:paddingTop="@dimen/lm_padding"
                android:paddingBottom="@dimen/s_padding"
                />
            <TextView
                android:id="@+id/tab_textView_seeall"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/see_all"
                android:textSize="@dimen/m_font"
                android:textStyle="bold"
                android:paddingTop="@dimen/lm_padding"
                android:paddingBottom="@dimen/s_padding"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontal_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_200"
                app:layout_constraintTop_toBottomOf="@id/tab_textView_top5"
                android:scrollbars="horizontal"
                />
            <TextView
                android:id="@+id/tab_textView_latest"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tab_textView_grid_btn"
                app:layout_constraintBottom_toBottomOf="@id/tab_textView_grid_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/latest_activity"
                android:textSize="@dimen/lm_font"
                android:textStyle="bold"
                android:paddingTop="@dimen/lm_padding"
                android:paddingBottom="@dimen/s_padding"
                />
            <ImageView
                android:id="@+id/tab_textView_grid_btn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/horizontal_recyclerView"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/image_2"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontal_recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_200"
                app:layout_constraintTop_toBottomOf="@id/tab_textView_grid_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scrollbars="horizontal"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>